# text-tut-ryadom

./: .gitignore  Cargo.toml  LICENSE.rtf  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.dev.json  vite.config.js
.github/workflows/: codeql.yml  publish.yml
examples/project/: fixture.highlights.csv  fixture.input.csv  fixture.output.csv
examples/tiny-fixture/: fixture.highlights.csv  fixture.input.csv  fixture.output.csv  label-studio.highlights.csv  label-studio.input.json  label-studio.output.csv
fixture_gen/: Pipfile  main.py
fixtures/small/: data.inputs.csv
locales/: ru.yml
src/: app.css  app.html  colors.ts  error.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: highlight.rs  input.rs  main.rs  output.rs  task.rs
src/app/: home.rs  mod.rs  routes.rs
src/app/data/: label_studio_src.rs  local_src.rs  mod.rs
src/app/guide/: mod.rs  project.rs  select.rs  summarize.rs
src/app/project/: mod.rs  select.rs  summarize.rs
src/app/setup/: approach.rs  data.rs  label_studio_src.rs  local_src.rs  mod.rs  text.rs  theme.rs
src/components/: card.rs  footer.rs  header.rs  header.svelte  highlight.svelte  highlightsArea.svelte  highlightsList.svelte  list.svelte  mod.rs  task.svelte
src/lib/: button.svelte  color.ts  colors.ts  defaults.ts  header.svelte  highlight.svelte  highlightsArea.svelte  highlightsList.svelte  highlightsPrioritized.svelte  input.svelte  labelStudio.ts  label_studio.ts  splitHighlights.ts  string.svelte  task.svelte  taskFooter.svelte  taskList.svelte  values.ts  words.svelte
src/lib/types/: AppData.ts  HighlightRecord.ts  InputRecord.ts  OutputRecord.ts  Preferences.ts  ScrollSync.ts  Task.ts  Token.ts
src/resource/: data_src.rs  mod.rs  state.rs
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/[task]/: +layout.svelte  +layout.ts  +page.svelte
src/routes/[task]/1/: +page.svelte
src/routes/[task]/2/: +page.svelte
src/routes/[task]/highlight/: +page.svelte
src/routes/[task]/summarize/: +page.svelte
src/routes/all-postponed/: +page.svelte
src/routes/directory/: +page.svelte
src/routes/directory/label-studio/: +page.svelte
src/routes/done/: +page.svelte
src/routes/setup/: +layout.svelte  +page.svelte
src/routes/setup/color/: +page.svelte
src/routes/setup/font/: +page.svelte
src/routes/setup/tone/: +page.svelte
src/state/: config.rs  data_src.rs  mod.rs
src/state/project/: entry.rs  mod.rs
src/types/: HighlightRecord.ts  OutputRecord.ts
src/util/: approach.rs  mod.rs  text.rs  theme.rs
static/: splashscreen.html
