[package]
name = "text-tut-ryadom"
version = "0.2.0"
edition = "2021"

[dependencies]
freya = { git = "https://github.com/marc2332/freya", features = ["devtools"] }
dioxus = { version = "0.5", features = [
    "macro",
    "hooks",
    "signals",
], default-features = false }
dioxus-rsx = { version = "0.5" }
dioxus-core-macro = { version = "0.5" }
dioxus-hooks = { version = "0.5" }
dioxus-signals = { version = "0.5" }
dioxus-core = { version = "0.5" }
dioxus-router = { version = "0.5", default-features = false }
dioxus-sdk = { version = "0.5", features = ["clipboard"] }
rust-i18n = "3.0.1"
tokio = { version = "1.38.0", default-features = false, features = [
    "fs",
    "net",
] }
secret-vault = "1.12.1"
dirs = "5.0.1"
cacache = { version = "13.0.0" }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.21"
simple-logging = "2.0.2"
color-art = "0.3"
derive_builder = "0.20.0"
