[package]
name = "anton-tut-text"
version = "0.1.1"
description = "A Tauri App"
authors = ["a.nvlkv <a.nvlkv@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-create-dir",
  "fs-read-file",
  "dialog-save",
  "fs-read-dir",
  "fs-exists",
  "dialog-open",
  "fs-write-file",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3.0"
ts-rs = { version = "8.1.0", features = ["chrono-impl"] }
chrono = { version = "0.4.38", features = ["serde", "clock"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
