[package]
name = "anton-tut-text"
version = "0.1.2"
description = "A Tauri App"
authors = ["https://antontut.ru", "a.nvlkv <a.nvlkv@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3.0"
ts-rs = { version = "8.1.0", features = ["chrono-impl"] }
chrono = { version = "0.4.38", features = ["serde", "clock"] }
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-dialog = "2.0.0-beta.9"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
